# rgz_graphics

./: .gitignore  Cargo.toml
examples/: rgz.rs  triangle.rs
examples/rgz/: main.rs  shader_program.rs  vertex_shader.glsl
gl/: Cargo.toml  build.rs
gl/src/: lib.rs
gl_window_provider/: Cargo.toml
gl_window_provider/src/: handler.rs  lib.rs
src/: array.rs  default_renderer.rs  error.rs  geometry_shader.glsl  gl_window_provider.rs  main.rs  renderer.rs  shader_program.rs  test_renderer.rs  texture.rs  vertex_shader.glsl
src/array/: elements_array.rs  mod.rs  vertices_array.rs
src/mesh_program/: fragment_shader.glsl  geometry_shader.glsl
src/polygon_program/: fragment_shader.glsl  geometry_shader.glsl  vertex_shader.glsl
