[package]
name = "gl_window_provider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = { path="../gl" }
glutin = "0.30.7"
winit = "0.28.4"
glutin-winit = "0.3.0"
raw-window-handle = "0.5.2"
glam = "0.24.0"
